tests/fail/str_lifetime.stderr
error[E0597]: `input` does not live long enough
 --> tests/fail/str_lifetime.rs:5:28
  |
5 |         s = sscanf::scanf!(input, "{str}").unwrap();
  |                            ^^^^^ borrowed value does not live long enough
6 |     }
  |     - `input` dropped here while still borrowed
7 |     println!("{}", s);
  |                    - borrow later used here
